--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,10 @@ the License.
 
         <!-- TODO: Update to Jersey 2.x -->
         <jersey-version>1.18</jersey-version>
-        <crud-api.version>0.3-SNAPSHOT</crud-api.version>
+        <crud-api.version>0.4-SNAPSHOT</crud-api.version>
+
+        <junit.version>4.11</junit.version>
+        <mockito.version>1.8.5</mockito.version>
     </properties>
 
     <repositories>
@@ -93,12 +96,25 @@ the License.
             <artifactId>crud-api</artifactId>
             <version>${crud-api.version}</version>
         </dependency>
+        <dependency>
+            <groupId>rickbw</groupId>
+            <artifactId>crud-api</artifactId>
+            <type>test-jar</type>
+            <version>${crud-api.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+            <version>${mockito.version}</version>
         </dependency>
     </dependencies>
 
